# beetune

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  REFACTORING_IDEAS.md  docker-compose.yml  idea.txt  jd.txt  new_stories.md  package.json  pyproject.toml  sample_resume.txt  test_job.txt
.github/workflows/: ci.yml  docker-publish.yml
beetune/: __init__.py  __main__.py  cli.py  config.py  server.py
beetune/analyzers/: __init__.py  job_analyzer.py  resume_analyzer.py
beetune/extractors/: __init__.py  file_processor.py  file_security.py
beetune/formatters/: __init__.py  resume_formatter.py
beetune/processors/: __init__.py  text_analyzer.py
beetune/prompts/: __init__.py  generators.py
beetune/renderers/: __init__.py  document_styler.py  latex_converter.py
beetune/utils/: __init__.py  exceptions.py
examples/: basic_usage.py  setup_example.py
scripts/: beetune-docker  install.sh
templates/latex/classic_letter/: template.tex
templates/latex/modern_report/: template.tex
templates/markdown/: github_flavored.md
tests/: __init__.py  test_config.py  test_extractors.py
